fxce-colosseum/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fxce-colosseum-api-test
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"

spec:
  tls:
  - hosts:
    - fxce-colosseum-api-test.fxce-colosseum-dev.vncdevs.com
    secretName: fxce-colosseum-api-test-fxce-colosseum-dev-tls
  rules:
  - host: fxce-colosseum-api-test.fxce-colosseum-dev.vncdevs.com
    http:
      paths:
      - path: /
        backend:
          serviceName: fxce-cls-api
          servicePort: 3000
